# price_conversion

./: .env  .gitignore  Instructions.md  README.md  pyproject.toml
_documentation/: Guidelines.md
config/: settings.py  urls.py
config/customization/: flexup_testrunner.py
core/enums/: country.py  currency.py  domain.py  general.py  language.py  status.py
core/models/: exchange_rate.py  flexup_auth_backend.py  flexup_enum.py  flexup_enum_field.py  flexup_model.py  log_changes.py  status_log.py
core/tests/: complex_status_enum.py  flexup_enum.py  log_changes.py  mod_data.py  show_differences.py
core/utils/: convert_currency.py  convert_unit.py  mod_data.py  show_differences.py  validate_member_permissions.py
homepage/: apps.py  base_data.py  base_functionnal.py  tests.py  views.py
product/: enums.py  models.py
product/tests/: conversion.py  product.py
user/: admin.py  models.py  views.py
user/tests/: user.py
utils/: print_object.py
utils/tests/: print_object.py
